docs: add GitHub setup commands reference and ignore file
- Add github-setup-commands.md with comprehensive GitHub CLI commands
- Include authentication, repository creation, and push commands
- Add useful GitHub CLI commands for repository management
- Ignore github-setup-commands.md in .gitignore for personal reference
- Provides handy reference for setting up repositories on different computers

--- a/.gitignore
+++ b/.gitignore
@@ -65,7 +65,8 @@ cdk.out/
 __MACOSX/
 .AppleDouble
 .LSOverride
-Icon[]
+Icon[
+]
 
 # Thumbnails
 ._*
@@ -306,3 +307,10 @@ luac.out
 *.i*86
 *.x86_64
 *.hex
+
+###-----------------------------###
+###  Project-Specific Files     ###
+###-----------------------------###
+
+# GitHub setup commands (personal reference)
+github-setup-commands.md
